Archive2/3b/2cf5115e59aeac/output
main.cpp: In member function 'void d::f()':
main.cpp:11:9: error: reference to 'b' is ambiguous
         b q;
         ^
main.cpp:5:10: note: candidates are: struct b b::b
 struct b {};
          ^
main.cpp:2:10: note:                 void a::b()
     void b();
          ^
